--- a/debtcare-front/package.json
+++ b/debtcare-front/package.json
@@ -55,6 +55,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.0",
     "react-dom": "^16.13.0",
+    "react-helmet": "^6.0.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
@@ -96,7 +97,8 @@
     ]
   },
   "devDependencies": {
-    "react-app-rewired": "^2.1.5"
+    "react-app-rewired": "^2.1.6",
+    "react-toastify": "^6.0.1"
   },
   "jest": {
     "roots": [
