--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
+    "preinstall": "npm i react-app-rewired",
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
