--- a/.env
+++ b/.env
@@ -1,7 +1,10 @@
 # Node mode env
 
 NODE_ENV=development
-PORT=3006
+PORT=3000
+
+NODE_OPTIONS=--max_old_space_size=4096
+GENERATE_SOURCEMAP=false
 
 REACT_APP_MENU_TOGGLE=true
 
